--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Inicio</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Sobre mim</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Habilidades</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Contato</a></li>
+                    <li class="nav__item"><a href="#inicio" class="nav__link">Inicio</a></li>
+                    <li class="nav__item"><a href="#sobremim" class="nav__link">Sobre mim</a></li>
+                    <li class="nav__item"><a href="#habilidades" class="nav__link">Habilidades</a></li>
+                    <li class="nav__item"><a href="#contato" class="nav__link">Contato</a></li>
                 </ul>
             </div>
 
@@ -37,15 +37,15 @@
         <!--===== Inicio =====-->
         <section class="inicio bd-grid" id="inicio">
             <div class="inicio__data">
-                <h1 class="inicio__title">Olá,<br>Me chamo <span class="home__title-color">Elisama,</span><br>sou bluemer </h1>
+                <h1 class="inicio__title">Olá,<br>Me chamo <span class="home__title-color">Elisama.</span><br>Sou bluemer </h1>
 
-                <a href="#" class="button">Contato</a>
+                <a href="#contato" class="button">Contato</a>
             </div>
 
             <div class="inicio__social">
-                <a href="" class="inicio__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="" class="inicio__social-icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="" class="inicio__social-icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.linkedin.com/in/talita-santana-22ba27175/" target="_blank" class="inicio__social-icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.instagram.com/talitacabral___/" target="_blank" class="inicio__social-icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://github.com/TalitaCbral" target="_blank" class="inicio__social-icon"><i class='bx bxl-github' ></i></a>
             </div>
 
             <div class="inicio__img">    
@@ -53,8 +53,8 @@
             </div>
         </section>
 
-        <!--===== ABOUT =====-->
-        <section class="sessão sobre mim " id="sobremim">
+        <!--===== sobre mim =====-->
+        <section class="sobremim section" id="sobremim">
             <h2 class="section-title">Sobre mim</h2>
 
             <div class="sobremim__container bd-grid">
@@ -63,8 +63,8 @@
                 </div>
                 
                 <div>
-                    <h2 class="sobremim__subtitle">Eu sou a Elisama</h2>
-                    <p class="sobremim__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                    <h2 class="sobremim__subtitle">Apresentação</h2>
+                    <p class="sobremim__text">Olá, meu nome é Elisama Talita C. Santana, atualmente moro sozinha na zona leste de São Paulo, tenho 20 anos e sou formada no ensino técnico na área da Saúde. No meu tempo livre, minhas atividades favoritas são a leitura, comunicação com amigos e familiares e ouvir música.</p>           
                 </div>                                   
             </div>
         </section>
@@ -110,16 +110,25 @@
                             
                         </div>
                         <div>
-                            <span class="habilidades__percentage">10%</span>
+                            <span class="habilidades__percentage">30%</span>
                         </div>
                     </div>
-                <div>              
-                    <img src="assets/img/work3.jpg" alt="" class="habilidades__img">
-                </div>
+                    <div class="habilidades__data">
+                        <div class="habilidades__names">
+                            <i class='bx bxl-python'></i>
+                            <span class="habilidades__name">PYTHON</span>
+                        </div>
+                        <div class="habilidades__bar habilidades__py">
+
+                        </div>
+                        <div>
+                            <span class="habilidades__percentage">60%</span>
+                        </div>
+                    </div>
             </div>
         </section>
 
-        <!--===== CONTACT =====-->
+        <!--===== CONTATO =====-->
         <section class="sessão contato" id="contato">
             <h2 class="section-title">Contato</h2>
 
@@ -127,7 +136,7 @@
                 <form action="" class="contato__form">
                     <input type="text" placeholder="Name" class="contato__input">
                     <input type="e-mail" placeholder="Email" class="contato__input">
-                    <textarea name="" id="" cols="0" rows="10" class="contato__input"></textarea>
+                    <textarea name="text" id="text" cols="0" rows="10" class="contato__input"></textarea>
                     <input type="button" value="Enviar" class="contato__button button">
                 </form>
             </div>
@@ -138,9 +147,9 @@
     <footer class="footer">
         <p class="footer__title">Elisama</p>
         <div class="footer__social">
-            <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-github' ></i></a>
+            <a href="https://www.instagram.com/talitacabral___/" target="_blank" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+            <a href="https://www.linkedin.com/in/talita-santana-22ba27175/" target="_blank" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://github.com/TalitaCbral" target="_blank" class="footer__icon"><i class='bx bxl-github' ></i></a>
         </div>
         <p>&#169; 2021 todos os direitos reservados</p>
     </footer>
