--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
             <div class="habilidades__container bd-grid">          
                 <div>
-                    <h2 class="habilidades__subtitle">Habilidades que Possuo</h2>
-                    <p class="habilidades__text">Atualmente, sendo aluna da instituição de ensino BlueEditech consigo garantir que possuo as habilidades abaixo mencionadas.</p>
+                    <h2 class="habilidades__subtitle">Minhas habilidades</h2>
+                    <p class="habilidades__text">Atualmente, sou aluna da instituição de ensino BlueEditech e por meio desta, adquiri  as habilidades a seguir elencadas:</p>
                     <div class="habilidades__data">
                         <div class="habilidades__names">
                             <i class='bx bxl-html5 skills__icon'></i>
