--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 
                 <div>
                     <h2 class="sobremim__subtitle">Apresentação</h2>
-                    <p class="sobremim__text">Olá, meu nome é Elisama Talita C. Santana, atualmente moro sozinha na zona leste de São Paulo, tenho 20 anos e sou formada no ensino técnico na área da Saúde. No meu tempo livre, minhas atividades favoritas são a leitura, comunicação com amigos e familiares e ouvir música.</p>           
+                    <p class="sobremim__text">Olá, me chamo Elisama Talita Cabral Santana, atualmente moro sozinha na região das zona leste de São Paulo, tenho 20 anos, sou formada no ensino técnico na área da Saúde. 
+                        Em meu tempo livre costumo ler um bom livro, interagir com amigos, familiares e claro ouvir aquela música.</p>           
                 </div>                                   
             </div>
         </section>
