--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Elisama</a>
+                <a href="#" class="nav__logo">Elisama.Santana</a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
@@ -22,6 +22,7 @@
                     <li class="nav__item"><a href="#inicio" class="nav__link">Inicio</a></li>
                     <li class="nav__item"><a href="#sobremim" class="nav__link">Sobre mim</a></li>
                     <li class="nav__item"><a href="#habilidades" class="nav__link">Habilidades</a></li>
+                    <li class="nav__item"><a href="#projetos" class="nav__link">Projetos</a></li>
                     <li class="nav__item"><a href="#contato" class="nav__link">Contato</a></li>
                 </ul>
             </div>
@@ -129,6 +130,18 @@
             </div>
         </section>
 
+    <!--===== projetos =====-->
+    <section class="projetos section" id="projetos">
+        <h2 class="section-title">Projetos</h2>
+
+        <div class="projetos__container bd-grid">
+            <div class="projetos__img">
+                <img src="assets/img/jogodohumor.png" alt="">
+            </div>
+            <div class="projeto__img">
+                <img src="assets/img/ficcaointerativa.png" alt="">
+            </div>
+        </section>
         <!--===== CONTATO =====-->
         <section class="sessão contato" id="contato">
             <h2 class="section-title">Contato</h2>
